# mfem-ad

./: .gitignore  CMakeLists.txt  README.md  ex0.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex4b.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  test.sh
data/: sloped_rectangle.mesh
src/: _ad-native.hpp  _ad_intg.hpp  _ad_intg2.hpp  _dof_pg.hpp  ad-native-def.hpp  ad-native.hpp  ad_intg.hpp  ad_intg2.hpp  ad_native.cpp  ad_native.hpp  ad_native2.cpp  ad_native2.hpp  dof_pg.hpp  logger.cpp  logger.hpp  mmto.cpp  mmto.hpp  pg.cpp  pg.hpp  pgpetsc  tools.hpp
template/: par_template.cpp  template.cpp
